--- a/DataValue/pyproject.toml
+++ b/DataValue/pyproject.toml
@@ -3,13 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "datavalue" # Nombre en PyPI
-version = "0.1.1"
+name = "datavalue"
+version = "0.1.3" 
 description = "Librería de tipos de datos primitivos y complejos"
 readme = "README.md"
 authors = [{ name="Specter" }]
 requires-python = ">=3.10"
 
 [tool.setuptools]
-# Esto le dice a Python que el paquete es la carpeta actual
-packages = ["datavalue"]
+packages = { find = {} }
