--- a/SecureFileHandler/pyproject.toml
+++ b/SecureFileHandler/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "securefilehandler"
-version = "0.1.0" 
+name = "securefilehandler-abs"
+version = "0.1.4" 
 description = "Librería de manejo seguro de datos (criptografia) sobre archivos"
 readme = "README.md"
 authors = [{ name="Specter" }]
